force-app/main/default/objects/SCOC__ConsumerStatementList__c/SCOC__ConsumerStatementList__c.object-meta.xml
<CustomObject>
    <description>Response Entity Consumer Statement List</description>
    <label>Consumer Statement</label>
    <nameField>
        <displayFormat>CSL-{00000}</displayFormat>
        <label>Consumer Statement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consumer Statements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>