force-app/main/default/objects/SCOC__ConsumerStatementList__c/fields/SCOC__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ExpirationDate__c</fullName>
    <description>ExpirationDate</description>
    <label>ExpirationDate</label>
    <type>Date</type>
</CustomField>