force-app/main/default/objects/SCOC__ConsumerStatementList__c/fields/SCOC__Message__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Message__c</fullName>
    <description>Consumer Statement message</description>
    <label>Message</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>