force-app/main/default/objects/SCOC__ConsumerStatementList__c/fields/SCOC__MessageCode__c.field-meta.xml
<CustomField>
    <fullName>SCOC__MessageCode__c</fullName>
    <description>Consumer Statement message code</description>
    <label>Message Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>